Set up page routing using React Router 5

--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,7 @@ body {
 .masthead {
   display: flex;
   align-items: center;
-  background-image: linear-gradient(
-          135deg,
-          rgb(24, 42, 115) 0%,
-          rgb(33, 138, 174) 69%,
-          rgb(32, 167, 172) 89%
-  ) !important;
+  background-color: #2185d0 !important;
   height: 100vh;
 }
 
@@ -43,7 +38,7 @@ body {
 }
 
 .masthead h1.ui.header {
-  font-size: 4em;
+  font-size: 2em;
   font-weight: normal;
 }
 
